# iris-velociraptorartifact-module

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  LICENSE  Makefile  README.md  buildnpush2iris.sh  setup.cfg  setup.py
iris_velociraptorartifact_module/: IrisVelociraptorartifactConfig.py  IrisVelociraptorartifactInterface.py  __init__.py
iris_velociraptorartifact_module/velociraptorartifact_handler/: velociraptorartifact_handler.py
