[metadata]
name = iris_velociraptorartifact_module
version = 0.1.0
description = `iris-velociraptorartifact-module` is a IRIS pipeline/processor module created with https://github.com/dfir-iris/iris-skeleton-module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/socfortress/iris-velociraptorartifact-module
author = SOCFortress
author_email = info@socfortress.co
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    iris_velociraptorartifact_module
    iris_velociraptorartifact_module.velociraptorartifact_handler
install_requires =
    pyvelociraptor~=0.1
    setuptools==59.6.0
python_requires = >=3.9
